fixed headings not aligning center properly on mobile by removing padding using media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,7 @@ body{
  .about-heading,
  .my-work-heading,
  .contact-heading{
+     padding: 0;
     text-align: center !important;
   }
 }
